# Minitel

./: LICENSE  README.md
documentation générale/: messages de la messagerie 40 colonnes.txt
m12/: dump.txt
m12/documentation/: Communication clavier - corps du minitel.txt  MBSL 4000FH5-5.txt  MBSL-4000FH5-5.txt
m12/dump/: dump.txt  erreurs logiques - émulateur.txt
m12/dump/ghidra/m12_dis.rep/: project.prp  projectState
m12/dump/ghidra/m12_dis.rep/idata/: ~index.bak
m12/dump/ghidra/m12_dis.rep/idata/00/: 0000000e.prp  0000000f.prp
m12/dump/ghidra/m12_dis.rep/idata/00/~0000000e.db/: db.1.gbf  db.2.gbf
m12/dump/ghidra/m12_dis.rep/idata/00/~0000000f.db/: db.2.gbf  db.3.gbf
m12/dump/ghidra/m12_dis.rep/idata/01/: 00000010.prp  00000011.prp  00000014.prp
m12/dump/ghidra/m12_dis.rep/idata/01/~00000010.db/: changeA.grf  changeB.grf  db.22.gbf  db.23.gbf  db.30.gbf  db.31.gbf  db.37.gbf  db.38.gbf  db.39.gbf  snapshotA.grf  snapshotB.grf
m12/dump/ghidra/m12_dis.rep/idata/01/~00000011.db/: changeA.grf  db.52.gbf  db.53.gbf  db.54.gbf  db.55.gbf  snapshotA.grf
m12/dump/ghidra/m12_dis.rep/idata/01/~00000014.db/: db.1.gbf
m12/dump/ghidra/m12_dis.rep/user/: ~index.bak  ~journal.bak
m12/dump/ghidra/m12_dis.rep/user/00/: 0000000d.prp  0000000e.prp  0000000f.prp
m12/dump/ghidra/m12_dis.rep/user/00/~0000000d.db/: db.21.gbf  db.22.gbf  db.23.gbf  db.24.gbf  db.25.gbf
m12/dump/ghidra/m12_dis.rep/user/00/~0000000e.db/: db.20.gbf  db.21.gbf  db.22.gbf  db.23.gbf  db.24.gbf
m12/dump/ghidra/m12_dis.rep/user/00/~0000000f.db/: db.37.gbf  db.38.gbf  db.39.gbf  db.40.gbf  db.41.gbf  db.42.gbf  db.43.gbf  db.44.gbf  db.48.gbf  db.49.gbf
m12/dump/ghidra/m12_dis.rep/user/01/: 00000010.prp
m12/dump/ghidra/m12_dis.rep/user/01/~00000010.db/: db.42.gbf  db.43.gbf  db.44.gbf  db.45.gbf  db.49.gbf  db.50.gbf
m12/émulateur/: .gitignore  80C32.cpp  CMakeLists.txt  DLatch.h  ROM_256k.cpp  SRAM_64k.cpp  WIP.txt  build_test.bat
m12/émulateur/CMake/: FindGlfw3.cmake  FindIXWebSocket.cmake
m12/émulateur/include/: FileAccess.h  FileSelector.h  FontAwesomeIcon.h  GlobalState.h  MainMenuWindow.h  MainMenuWindow.h.old  MemoryWindow.h  NotificationServer.h  Parameters.h  Shaders.h  data_path.h  encoding.h  license.h  m12_threads.h  thread_messaging.h
m12/émulateur/include/circuit/: 80C32.h  AudioBuffer.h  BuzzerBuffer.h  BuzzerFilter.h  CPLD.h  CRTBuffer.h  DIN5Interface.h  DLatch.h  IOLogger.h  Keyboard.h  L6720.h  L6720.h.old  Latch.h  PhoneLine.h  PhoneLineWirring.h  ROM_256k.h  SRAM_64k.h  SpeakerBuffer.h  SpeakerFilter.h  TS7514.h  TS9347.h  TS9347.h.old  WatchdogTimer.h  clocks.h  wirring.h
m12/émulateur/include/circuit/DIN5/: DIN5InterfaceBase.h  DIN5InterfaceLocalWebsocket.h  DIN5InterfaceLocalWebsocket.h.old  MinitelNetwork.h  vdt.h
m12/émulateur/include/circuit/RTC/: RTCNetwork.h
m12/émulateur/include/circuit/debug/: IOLogger.h  dbg_80C32.h  decomp_m12_rom.h
m12/émulateur/include/glad/: glad.h
m12/émulateur/include/icon/: M12_icon_square.png.h  app.rc
m12/émulateur/include/io/: CRTRenderer.h  KeyboardAudio.h  KeyboardIndicator.h  KeyboardInput.h  NotificationServer.h  PrinterOutput.h  TS7514Audio.h  TS9347Renderer.h.old  video.h
m12/émulateur/logs/TS9347 - 14_12_2025/: 1.txt
m12/émulateur/src/: FileAccess.cpp  data_path.cpp  encoding.cpp  glad.c  main.cpp  main_audio.cpp  main_audio.cpp.old  main_circuit.cpp  main_log.cpp  main_video.cpp  thread_messaging.cpp
m12/émulateur/src/circuit/80C32/: 80C32.cpp
m12/émulateur/src/circuit/CPLD/: MBSL_4000FH5_5.cpp
m12/émulateur/src/circuit/ROM_256k/: Bz6.rom  ROM_256k.cpp
m12/émulateur/src/circuit/SRAM_64k/: SRAM_64k.cpp
m12/émulateur/src/circuit/TS7514/: TS7514Audio.cpp  TS7514Audio.cpp.old
m12/émulateur/src/circuit/TS9347/: TS9347.cpp  TS9347.cpp.old  TS9347_Texture_Character_Set_Datasheet.pdn
m12/émulateur/test/: config.json  imgui.ini  test.cpp
outils/: PCE.py  audio_répondeur.py  checksum_ffad.py  din5.py  m12_ringtone_generator.py  v23_audio_decoder.py
